--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,13 @@
             <version>${junit.version}</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.apache.pdfbox</groupId>
+            <artifactId>pdfbox</artifactId>
+            <version>3.0.6</version>
+            <scope>compile</scope>
+        </dependency>
+
     </dependencies>
 
     <build>
