--- a/pom.xml
+++ b/pom.xml
@@ -67,7 +67,7 @@
                         <!-- Default configuration for running with: mvn clean javafx:run -->
                         <id>default-cli</id>
                         <configuration>
-                            <mainClass>org.example.pdftransformer/org.example.pdftransformer.HelloApplication
+                            <mainClass>org.example.pdftransformer/org.example.pdftransformer.Main
                             </mainClass>
                             <launcher>app</launcher>
                             <jlinkZipName>app</jlinkZipName>
